Thu Jul 17 13:37:32 EST 2008  <baueran@gmail.com>

- README: updated installation instructions
- Makefile: changed dist target

Wed Jul 16 19:51:56 EST 2008  <baueran@gmail.com>

- src/gutils.ml: fixed bug mentioned in previous commit message

Wed Jul 16 19:37:39 EST 2008  <baueran@gmail.com>

- src/gutils.ml: documented bug for has_path in inline documentation, but
  did not provide fix for it, yet

Wed Jul 16 16:37:26 EST 2008  <baueran@gmail.com>

- src/neverl.mll: glob comments
- src/neverp.mly: remove rule for dealing with comments

Sat Jul 12 16:37:06 EST 2008  <baueran@gmail.com>

- src/neverl.mll: add support for '_' in tokens

Sat Jul 12 16:13:43 EST 2008  <baueran@gmail.com>

- src/Makfile: added doc target
- src/ocamlweb.sty: ocamlweb style file added
- src/fsmcrossprod: updated inline documentation

Fri Jul 11 11:15:20 EST 2008  <baueran@gmail.com>

- Makefile: updated version from 0.0.2 to 0.0.3
- src/config.ml: updated version from 0.0.2 to 0.0.3
- src/fsmcrossprod.ml: changed help text

Thu Jul 10 13:18:08 EST 2008  <baueran@gmail.com>

- NEWS: added
- ChangeLog: added
- src/neverl.mll: switched off print_char statement that would print
  unmatched characters and confuse the parser.
- src/config.ml: updated version from 0.0.1 to 0.0.2
- src/fsmcrossprod.ml: added -c option for colouring states
